Fix: align clock correctly and remove not needed properties

--- a/vvs.css
+++ b/vvs.css
@@ -12,14 +12,11 @@ html, body {
 
 .clock {
     font-size: xx-large;
-    width: 50%;
     text-align: right;
-    overflow: hidden;
 }
 
 .next-update {
     font-size: xx-large;
-    width: 40%;
     float: left;
 }
 
